--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -11,6 +11,7 @@ $dark-green:             #25714a;
 $green-transparent:      #008036;
 
 $blue:                   #4272b8;
+$dark-blue:              #00309e;
 $blue-transparent:       #07449F;
 
 $purple:                 #50397F;
