--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -22,4 +22,19 @@ $dark-red:               #d75145;
 
 
 
+// Sizing
 $padding-section:        80px 0 140px 0;
+$pt:                     150px;
+$pb:                     100px;
+
+$margin-mobile:          25px;
+$mt:                     70px;
+$mb:                     70px;
+
+
+// Screen sizes
+$xs:                     480px;
+$small:                  768px;
+$medium:                 992px;
+$large:                  1200px;
+$xl:                     1920px;
