--- a/src/scss/rmp2.scss
+++ b/src/scss/rmp2.scss
@@ -54,18 +54,26 @@ hr {
 }
 
 .mt {
-    margin-top: 70px;
+    margin-top: $mt; // 70px
+}
+
+.mt-mobile {
+    margin-top: $mt;
+    
+    @media (max-width: 991px) {
+        margin-top: $margin-mobile; // 25px
+    }
 }
 
 .mb {
-    margin-bottom: 70px;
+    margin-bottom: $mb; // 70px
 }
 
 .pt {
-    padding-top: 150px;
+    padding-top: $pt; // 150px
 }
 .pb {
-    padding-bottom: 100px;
+    padding-bottom: $pb; // 100px
 }
 
 
@@ -326,25 +334,6 @@ a:hover .fa-circle  { color: $dark-grey;}
     }
 }
 
-@media (max-width: 768px) {
-    #blogwrap h1, #aboutwrap h1, #headerwrap h1, #workwrap h1 {
-        font-size: 40px;
-    }
-    
-    .overlay {
-        padding: 130px 0 100px;
-    }
-}
-
-.allwrap  {
-    p {
-        margin: 0;
-    }
-    
-    a {
-        color:$white;
-    }
-}
 
 
 #blogwrap h4, #headerwrap h4, #workwrap h4 {
@@ -552,6 +541,8 @@ a:hover .fa-circle  { color: $dark-grey;}
     .call-left,
     .call-right {
         height: 400px;
+        padding-top: $mt;
+        padding-bottom: $mb;
         
         p {
             color: $white;
@@ -569,6 +560,14 @@ a:hover .fa-circle  { color: $dark-grey;}
     
     .call-content {
         padding: 0 50px;
+        
+        @media (max-width: $medium) {
+            float: none !important;
+        }
+    }
+    
+    .cta-title {
+        margin-bottom: 70px;
     }
 }
 
@@ -741,6 +740,10 @@ footer {
 #content-home-2 {
     background: $white;
     padding: 100px 0;
+    
+    @media (max-width: $medium) {
+        padding: 0;
+    }
 
     h2 {
         margin-bottom: 30px;
@@ -752,6 +755,10 @@ footer {
     #content-home {
         background: $dark-white;
         padding: 100px 0;
+        
+        @media (max-width: $medium) {
+            padding: 0 0 100px 0;
+        }
 
     }
 }
@@ -760,6 +767,9 @@ footer {
     #content-home {
         padding: 10px 0;
 
+        @media (max-width: $medium) {
+            padding: 0 0 100px 0;
+        }
     }
 }
 
@@ -824,12 +834,27 @@ footer {
     }
 }
 .page-contact .contact-info {
+    
+    .details {
+        transform: translate(-40px,0);
+        
+        @media (max-width: $small) {
+            transform: none;
+            text-align: center;
+            margin-top: 15px;
+        }
+    }
+    
     img {
         border-radius: 90px;
         height: 100px;
         width: 100px;
         border: 6px solid #eee;
         transform: translate(-20px,0);
+        
+        @media (max-width: $small) {
+            transform: none;
+        }
     }
     
     h4 {
@@ -910,6 +935,17 @@ footer {
         font-weight: 300;
         height: 500px;
         
+        @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+            background: 50px 30px 40px 30px;
+            height: 600px;
+        }
+        
+        @media (max-width: $xs) {
+            &:not(.louise) {
+                margin-top: 100px;
+            }
+        }
+        
         h3 {
             font-size: 22px;
             text-transform: uppercase;
@@ -925,17 +961,21 @@ footer {
             margin-bottom: 16px;
         }
         
+        
         &:before {
+            content: '';
             width: 150px;
             height: 150px;
             position: absolute;
             top: -60px;
             transform: translate(-50%, 0);
-            content: '';
-            background: $dark-white;
-            background-repeat: no-repeat;
-            background-position: center center;
-            background-size: contain;
+            display: inline-block;
+            background: {
+                color: $dark-white;
+                repeat: no-repeat;
+                position: center center;
+                size: contain;
+            }
             border-radius: 90%;
             border: 10px solid $dark-white;
         }
@@ -949,6 +989,14 @@ footer {
         &.michael:before {
             background-image: url(../img/contact/Michael-rounded.png);
         }       
+        
+        @media all and (-ms-high-contrast: active), (-ms-high-contrast: active) {
+            &:before {
+                position: relative;
+                top: 0;
+                transform: translate(0, 0);
+            }
+        }
         
 //        &:hover {
 //            background: $white;
@@ -994,6 +1042,15 @@ footer {
         &:after {
             background-image: url(../img/contact/Louise.png);
 
+        }
+        
+        @media (max-width: $medium) {
+            margin-top: 100px;
+            margin-bottom: -70px;
+        }
+        
+        @media (max-width: $xs) {
+            padding: 160px 20px 40px 20px;
         }
     }
 
@@ -1082,6 +1139,10 @@ footer {
     .speech-bubble {
         padding: 30px;
         
+        @media (max-width: $medium) {
+            margin-bottom: 100px;
+        }
+        
         p {
             padding: 0;
         }
@@ -1156,6 +1217,10 @@ footer {
 .page-parents .speech-bubble {
      margin-top: 140px;
     
+    @media (max-width: $medium) {
+        margin-top: 100px;
+    }
+    
     &.offset:after {
         border-width: 60px 0 0 60px;
     }
@@ -1180,15 +1245,26 @@ footer {
             font-size: 16px;
             padding: 35px;
             
-            &:hover {
-                margin-top: -15px;
-                box-shadow: 0px 6px 15px $grey;
+            @media (max-width: $large) {
+                height: 480px;
+            }
+            
+            @media (min-width: $medium) {
+                &:hover {
+                    margin-top: -15px;
+                    box-shadow: 0px 6px 15px $grey;
+                }
             }
             
             &.ipad {
                 color: $white;
                 background: url(../img/instructions/photo-tip.jpg);
                 background-size: contain;
+                
+                @media (max-width: $medium) {
+                    height: auto;
+                    background-size: cover;
+                }
                 
                 p {
                     font-style: italic;
@@ -1208,6 +1284,21 @@ footer {
             
         }
     }
+    
+    #compatibility {
+        padding-bottom: 70px;
+        
+        .devices {
+            border-right: none;
+            margin-bottom: 100px;
+        }
+        
+        .devices, .browsers {
+            .col-md-3, .col-md-6 {
+                margin-top: 25px;
+            }
+        }
+    }
 }
 
 
@@ -1216,53 +1307,53 @@ footer {
 .page-stories {
     background: $dark-white;
 
-    
     .nav-pills {
-        
+
         li {
             background: $purple;
             &.active a {
                 background: $dark-purple;
             }
-            
+
             a {
                 color: $white;
                 padding: 15px;
             }
         }
-        
-        li:first-of-type {
-            border-radius: 90px 0 0 90px;
-            border-right: 2.5px solid $white;
-            
-            &.active a,
-            &>a:hover,
-            &>a:focus {
-                border-radius: 90px 0 0 90px;
-            }
-        }
-        li:nth-of-type(2) {
-            border-radius: 0 0 0 0;  
-            border-right: 1px solid $white;
-            border-left: 1px solid $white;
-            
-            &.active a,
-            &>a:hover,
-            &>a:focus {
-                border-radius: 0 0 0 0;            
-            }
-        }
-        li:last-of-type {
-            border-radius: 0 90px 90px 0;            
-            border-left: 2.5px solid $white;
 
-            &.active a,
-            &>a:hover,
-            &>a:focus {
+        @media (min-width: 768px) {
+            li:first-of-type {
+                border-radius: 90px 0 0 90px;
+                border-right: 2.5px solid $white;
+
+                &.active a,
+                &>a:hover,
+                &>a:focus {
+                    border-radius: 90px 0 0 90px;
+                }
+            }
+            li:nth-of-type(2) {
+                border-radius: 0 0 0 0;  
+                border-right: 1px solid $white;
+                border-left: 1px solid $white;
+
+                &.active a,
+                &>a:hover,
+                &>a:focus {
+                    border-radius: 0 0 0 0;            
+                }
+            }
+            li:last-of-type {
                 border-radius: 0 90px 90px 0;            
+                border-left: 2.5px solid $white;
+
+                &.active a,
+                &>a:hover,
+                &>a:focus {
+                    border-radius: 0 90px 90px 0;            
+                }
             }
         }
-        
     }
     
     .nav>li>a:hover,
@@ -1414,7 +1505,7 @@ footer {
             .overlay {
                 height: 95vh;
                 
-                @media (max-width: 992px) {
+                @media (max-width: $medium) {
                     height: 100%;
                     padding-bottom: 100px;
                 }
@@ -1457,7 +1548,7 @@ footer {
 
 .intro-card {
     background: $dark-white;
-    padding: 210px 0 30px 0;
+    padding: 60px 0 30px 0;
     
     a {
         border-radius: 90px;
@@ -1507,9 +1598,10 @@ footer {
         width: 170px;
         height: 170px;
         display: inline-block;
-        position: absolute;
-        top: 30px;
-        transform: translate(-50%, 0);
+        
+//        position: absolute;
+//        top: 30px;
+//        transform: translate(-50%, 0);
         background-repeat: no-repeat;
         background-position: center center;
         background-size: contain;
@@ -1630,3 +1722,5 @@ footer {
         transform: rotate3d(0, 0, 1, 0deg);
     }
 }
+
+@import "mobile";
