--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -32,7 +32,7 @@ $mt:                     70px;
 $mb:                     70px;
 
 
-// Screen sizes
+// Screen sizes, matching Bootstrap's
 $xs:                     480px;
 $small:                  768px;
 $medium:                 992px;
