--- a/css/rmp2.css
+++ b/css/rmp2.css
@@ -144,8 +144,23 @@ a.navbar-brand {
   top: 9px;
   margin-right: 15px;
 }
+@media (max-width: 768px) {
+  .navbar-custom #menu-main-navigation .rmp-btn {
+    width: 33%;
+  }
+}
+@media (max-width: 480px) {
+  .navbar-custom #menu-main-navigation .rmp-btn {
+    width: 66%;
+  }
+}
 .navbar-custom #menu-main-navigation .rmp-btn:last-of-type {
   margin-right: 0;
+}
+@media (max-width: 768px) {
+  .navbar-custom #menu-main-navigation .rmp-btn:last-of-type {
+    margin-top: 25px;
+  }
 }
 .navbar-custom #menu-main-navigation .rmp-btn a {
   padding: 10px 15px;
