--- a/src/scss/rmp2.scss
+++ b/src/scss/rmp2.scss
@@ -148,8 +148,19 @@ a.navbar-brand {
     top: 9px;
     margin-right: 15px;
     
+    @media (max-width: $small) {
+        width: 33%;
+    }
+    @media (max-width: $xs) {
+        width: 66%;
+    }
+    
     &:last-of-type {
         margin-right: 0;
+        
+        @media (max-width: $small) {
+            margin-top: 25px;
+        }
     }
     
     a {
